macros/tests/ui/declare/duplicate_id_fail.stderr
error: Same `id: same_id` assign to multiple objects, id must be unique.
 --> tests/ui/declare/duplicate_id_fail.rs:6:11
  |
6 |       id: same_id,
  |           ^^^^^^^
...
9 |         id: same_id,
  |             ^^^^^^^
